--- a/content/Все фотографии.md
+++ b/content/Все фотографии.md
@@ -14,6 +14,8 @@ save_as: allphoto.html
 </div>
 
 <div class="content">
+	<a class='gl' href="/theme/images/Z2mf_SaZNvw.jpg" style='background-image: url("/theme/images/Z2mf_SaZNvw.jpg")'><p></p></a>
+	<a class='gl' href="/theme/images/RpmQ5hKcQYs.jpg" style='background-image: url("/theme/images/RpmQ5hKcQYs.jpg")'><p></p></a>
 	<a class='gl' href="/theme/images/18.jpg" style='background-image: url("/theme/images/18.jpg")'><p></p></a>
 	<a class='gl' href="/theme/images/17.jpg" style='background-image: url("/theme/images/17.jpg")'><p></p></a>
 	<a class='gl' href="/theme/images/14.jpg" style='background-image: url("/theme/images/14.jpg")'><p></p></a>
