--- a/content/Записаться.md
+++ b/content/Записаться.md
@@ -17,9 +17,10 @@ save_as: training.html
 <div class='Formglav'>
 	<script class='form' src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/6439888690fa7b0f549ed4c2/?iframe=1" frameborder="0" name="ya-form-6439888690fa7b0f549ed4c2" width="650"></iframe>
 </div> -->
-<div><mark>Скоро на сайте можно будет записываться!</mark></div>
-
-<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/kaskad/68418847346/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Каскад</a><a href="https://yandex.ru/maps/1/moscow-and-moscow-oblast/category/horse_riding/184107287/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Конный клуб в Москве и Московской области</a><iframe src="https://yandex.ru/map-widget/v1/?ll=38.191808%2C55.548598&mode=search&oid=68418847346&ol=biz&z=17.01" width="100%" height="600" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+<div><mark>Скоро на сайте можно будет записаться!</mark></div>
+<div class="Karta">
+	<iframe src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=68418847346" width="50%" height="560" frameborder="0"></iframe>
+</div>
 
 <div class="footer2" style='margin-top: 35px;'>
      <div class='titlef' style='text-align: right; font-size: 25px;'>Номер телефона администратора: <br><a href="tel:+79299274497" style='color: #FFBC39;'><b>+7 929 927-44-97</b></a></div>
