--- a/content/Тест.md
+++ b/content/Тест.md
@@ -4,82 +4,11 @@ Short: True
 url: teststrinprivste
 save_as: teststrinprivste.html
 
-<h1>ЭТО ТЕСТОВАЯ СТРАНИЦА. ЗДЕСЬ НИЧЕГО НЕ РАБОТАЕТ ДЛЯ ОСТАЛЬНЫХ ПОЛЬЗОВАТЕЛЕЙ!</h1>
-
-
-
-<!-- <html>
- <head><title>Форма обратного звонка с сайта</title></head>
- <script type="text/jаvascript" src="jquery.min.js"></script>
- <body>
- <input type="text" name="fio" placeholder="Имя" required>
- <input type="Phone" name="tel" placeholder="Телефон" required>
- <div id="form_result"></div>
- <input id="submit" type="submit" value="Заказать звонок">
- <script type="text/jаvascript" src="bootstrap.js"></script>
- <script>
- $("#submit").click(function() {
- var name = $('input[name=fio]').val();
- var tel = $('input[name=tel]').val();
- var otpravka = true;
- if(name==""){
- otpravka = false;
- }
- if(tel==""){
- otpravka = false;
- }
- if(otpravka)
- {
-
- dannie = {'polz_name':name, 'polz_tel':tel};
- $.post('senda.php', dannie, function(otvet){
- rezultat = '<div style="color:#D80018;">'+otvet.text+'</div>';
- $("#form_result").hide().html(rezultat).slideDown();
- }, 'json');
- }
- });
- </script>
- </body>
-
-
-
-<div class='video'>
-  <iframe src="https://vk.com/video_ext.php?oid=-62120883&id=456239489&hash=b565466d50ee26b3&hd=2" width="643" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
-  <iframe src="https://vk.com/video_ext.php?oid=-62120883&id=456239490&hash=136f8f603aa61221&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
+<h1>ТЕСТОВАЯ СТРАНИЦА.</h1>
+<meta name="robots" content="noindex">
+<div class='Formglav'>
+  <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/6439888690fa7b0f549ed4c2/?iframe=1" frameborder="0" name="ya-form-6439888690fa7b0f549ed4c2" width="650"></iframe>
 </div>
-
-<style>
-form {
-background-color:#0049DD;
-width:70%;
-margin:0 auto;
-padding:15px;
-
-}
-</style>
-<form action="/" method="post">
-<fieldset>
-<label> ФИО: <input type="name" placeholder="Имя" required></input></label><br>
-<label> Ваша эл. почта: <input type="email" placeholder="Email" required></input></label><br>
-<label> Ваш номер телефона: <input type="Phone number" placeholder="Номер телефона" required></input></label>
-</fieldset>
-<fieldset>
-<legend>Иные элементы управления формой</legend>
-<label>Укажите дату - <input type="date"></label><br>
-<label>К кому хотите записаться? - 
-<select type='trennn'>
-  <option>Юрченко Наталия Владимировна</option>
-  <option>Большакова Марина Владимировна</option>
-  <option>Калашникова Елена Сергеевна</option>
-  <option>Журов Александр Алексеевич</option>
-</select></label><br>
-<label>Каким образом направить вам ответ?<br>
-<input type="checkbox" name="a" value="1" checked>>По электронной почте<br>
-<input type="checkbox" name="a" value="2">Перезвонить по телефону<br>
-<label>
-</fieldset>
-<label><button formnovalidate type="submit">Отправить</button><button type="reset">Очистить</button></label>
-</form> -->
 
 <div class="footer2" style='margin-top: 35px;'>
      <div class='titlef' style='text-align: right; font-size: 25px;'>Номер телефона отвечающего за сайт: <br><a href="tel:+79854751961" style='color: #FFBC39;'><b>+7 985 475-19-61</b></a> и <a href="https://vk.com/maxim_lyubertsy" style='color: #FFBC39;'>ВКонтакте</a></div>
