--- a/content/Вольтижировка описание.md
+++ b/content/Вольтижировка описание.md
@@ -16,7 +16,7 @@ save_as: Vo.html
 </div>
 <div class="op"><b>Можно записаться, нажав на кнопку ниже.</b></div>
 <div class="buttons_gl">
-     <button class="button_gl2" href="/training"><b>Записаться</b></button>
+     <a href="/training"><button class="button_gl2"><b>Записаться</b></button></a>
 </div>
 <div class="content">
      <a class='gl' href="/theme/images/Vol.jpg" style='background-image: url("/theme/images/Vol.jpg")'><p></p></a>
