--- a/content/Конная стрельба описание.md
+++ b/content/Конная стрельба описание.md
@@ -15,7 +15,7 @@ save_as: Str.html
 </div>
 <div class="op"><b>Можно записаться, нажав на кнопку ниже.</b></div>
 <div class="buttons_gl">
-     <button class="button_gl2" href="/training"><b>Записаться</b></button>
+     <a href="/training"><button class="button_gl2"><b>Записаться</b></button></a>
 </div>
 <div class="content">
      <a class='gl' href="/theme/images/STRLjpg.jpg" style='background-image: url("/theme/images/STRLjpg.jpg")'><p></p></a>
