--- a/content/Джигитовка описание.md
+++ b/content/Джигитовка описание.md
@@ -27,5 +27,5 @@ save_as: D.html
 <div class="footer2" style='margin-top: 35px;'>
      <div class='titlef' style='text-align: right; font-size: 25px;'>Номер телефона администратора: <br><a href="tel:+79299274497" style='color: #FFBC39;'><b>+7 929 927-44-97</b></a></div>
      <div class='titlef' style='text-align: right; font-size: 25px;'>Номер телефона отвечающего за сайт: <br><a href="tel:+79854751961" style='color: #FFBC39;'><b>+7 985 475-19-61</b></a> и <a href="https://vk.com/maxim_lyubertsy" style='color: #FFBC39;'>ВКонтакте</a></div>
-     <div class="contein3"><b>© КСК Каскад | от <a href='https://vk.com/maxim_lyubertsy'>Максима Соколова</a></b></div>
+     <div class="contein3"><b>© КСК "Каскад" | от <a href='https://vk.com/maxim_lyubertsy'>Максима Соколова</a></b></div>
 </div>
